# lustre

./: .cray-obs-config.xml  .gitignore  LUSTRE-VERSION-GEN  META  Makefile  Makefile.in  Makefile.obs  README  autoMakefile.am  autogen.sh  ccs-lustre-apollo.spec  ccs-lustre-apollo_s.spec  configure.ac  cray-lnet-devel.spec  cray-lnet.pc  cray-lustre-ari_c-rhine.spec  cray-lustre-ari_c.spec  cray-lustre-ari_m.spec  cray-lustre-ari_s-cos.spec  cray-lustre-ari_s-rhine.spec  cray-lustre-ari_s-sim.spec  cray-lustre-ari_s.spec  cray-lustre-default.spec  cray-lustre-dmp_c.spec  cray-lustre-dmp_s.spec  cray-lustre-gem_c.spec  cray-lustre-gem_s-cos.spec  cray-lustre-gem_s-sim.spec  cray-lustre-gem_s.spec  cray-lustre-lnet-ari_c.spec  cray-lustre-lnet-ari_s-rhine.spec  cray-lustre-lnet-ari_s.spec  cray-lustre-lnet-gem_c.spec  cray-lustre-lnet-gem_s.spec  cray-lustre-pinehurst.spec  cray-lustre.spec  lustre-dkms.spec.in  lustre-dkms_post-build.sh  lustre-dkms_pre-build.sh  lustre.spec.in  (+1 more)
Documentation/: lock_ahead.txt  osd-api.txt
config/: lustre-build-ldiskfs.m4  lustre-build-linux.m4  lustre-build-zfs.m4  lustre-build.m4  lustre-core.m4  lustre-libcfs.m4  lustre-lnet.m4
contrib/: Dockerfile-centos7  Dockerfile-centos8  Dockerfile-rocky96  cray-commit-template
cray-obs/: cray-lustre-ari_c.spec  cray-lustre-ari_s.spec  cray-lustre-client-dkms.spec  cray-lustre-client-ofed.spec  module.in  (+5 more)
devel/: config.h  configure.in  cray-lnet-devel.pc.in  cray-lustre-api-devel.pc  cray-lustre-cfsutil-devel.pc  cray-lustre-ptlctl-devel.pc  cray-lustre.conf  lctl-makefile  module.in
switch/: Makefile.am  configure.in  module.in
(+1085 files in other folders)
